--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,23 @@
   padding: 0 3px;
 } */
 
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.menu {
+  width: 100px;
+  cursor: pointer;
+  /* text-align: center; */
+}
+
 .submenu {
   display: none;
+}
+
+.submenu:hover {
+  background-color: aqua;
 }
 
 .visible {
