Use `mouseenter` and `mouseleave` events
`mouseover` and `mouseout` were calling the parent div event handler
each time the mouse was moved in their surface area.

--- a/src/style.css
+++ b/src/style.css
@@ -6,27 +6,31 @@
 
 .menu-container {
   position: relative;
-
+  cursor: pointer;
 }
 
-.menu {
+.root-menu {
   width: 100px;
-  cursor: pointer;
-  z-index: 0;
+  /* z-index: 0; */
   background-color: fuchsia;
 }
 
-.submenu {
-  /* display: none; */
-  position: absolute;
-  
-  /* transform: translateY(-100%); */
-  bottom: 0px;
+.sub-menu {
+  display: none;
+  /* position: absolute; */
 
-  z-index: -1;
+  /* bottom: 0px; */
+
   width: 100px;
   background-color: greenyellow;
-  border: 1px solid red;
+}
+
+.layer-0 {
+  /* z-index: 0; */
+}
+
+.layer-minus-1 {
+  /* z-index: 0; */
 }
 
 .offset-layer {
