--- a/src/style.css
+++ b/src/style.css
@@ -17,20 +17,20 @@
 
 .sub-menu {
   display: none;
-  /* position: absolute; */
+  position: absolute;
 
-  /* bottom: 0px; */
+  bottom: 0px;
 
   width: 100px;
   background-color: greenyellow;
 }
 
 .layer-0 {
-  /* z-index: 0; */
+  z-index: 0;
 }
 
 .layer-minus-1 {
-  /* z-index: 0; */
+  z-index: -1;
 }
 
 .offset-layer {
