--- a/src/style.css
+++ b/src/style.css
@@ -43,12 +43,12 @@
 
 @keyframes offset-layer {
   from {
-    /* opacity: 0%; */
+    opacity: 0%;
   }
 
   to {
     transform: translateY(100%);
-    /* opacity: 100%; */
+    opacity: 100%;
   }
 }
 
