--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,15 @@
 .visible {
   display: block;
 }
+
+.picture-frame {
+  width: 256px;
+  height: 256px;
+  border: 2px solid rgb(132, 0, 255);
+}
+
+.slide-show {
+  width: 1024px;
+  height: 256px;
+  border: 2px solid rgb(81, 255, 0);
+}
