--- a/src/style.css
+++ b/src/style.css
@@ -59,13 +59,41 @@
 }
 
 .picture-frame {
+  display: flex;
+
   width: 256px;
   height: 256px;
-  border: 2px solid rgb(132, 0, 255);
+  border: 5px solid rgb(0, 0, 0);
 }
 
 .slide-show {
+  display: flex;
+
   width: 1024px;
   height: 256px;
-  border: 2px solid rgb(81, 255, 0);
+  /* border: 2px solid rgb(81, 255, 0); */
+}
+
+#slide-0 {
+  background-color: aqua;
+  width: 256px;
+  height: 256px;
+}
+
+#slide-1 {
+  background-color: rgb(162, 0, 255);
+  width: 256px;
+  height: 256px;
+}
+
+#slide-2 {
+  background-color: rgb(255, 0, 106);
+  width: 256px;
+  height: 256px;
+}
+
+#slide-3 {
+  background-color: rgb(0, 255, 98);
+  width: 256px;
+  height: 256px;
 }
