--- a/src/style.css
+++ b/src/style.css
@@ -75,26 +75,28 @@
   /* border: 2px solid rgb(81, 255, 0); */
 }
 
-#slide-0 {
-  background-color: aqua;
+.slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 256px;
   height: 256px;
+  font-size: 10rem;
+}
+
+#slide-0 {
+  background-color: aqua;
 }
 
 #slide-1 {
   background-color: rgb(162, 0, 255);
-  width: 256px;
-  height: 256px;
 }
 
 #slide-2 {
   background-color: rgb(255, 0, 106);
-  width: 256px;
-  height: 256px;
 }
 
 #slide-3 {
   background-color: rgb(0, 255, 98);
-  width: 256px;
-  height: 256px;
 }
