--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,10 @@
   display: block;
 }
 
+.picture-frame-container {
+  display: flex;
+}
+
 .picture-frame {
   display: flex;
   overflow: hidden;
@@ -72,7 +76,6 @@
 
   width: 1024px;
   height: 256px;
-  /* border: 2px solid rgb(81, 255, 0); */
 }
 
 .slide {
