--- a/src/style.css
+++ b/src/style.css
@@ -71,13 +71,16 @@
   border: 5px solid rgb(0, 0, 0);
 }
 
+.slide-show-container {
+  display: flex;
+  transition: translate 1s ease-in-out;
+}
+
 .slide-show {
   display: flex;
 
   width: 1024px;
   height: 256px;
-
-  transition: translate 1s ease-in-out;
 }
 
 .slide {
@@ -104,4 +107,10 @@
 
 #slide-3 {
   background-color: rgb(0, 255, 98);
+}
+
+.inner {
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
 }
