--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,10 @@
 
 #slide-show {
   display: flex;
+  justify-content: flex-end;
   transition: translate 1s ease-in-out;
+
+  /* width: calc(256px * 4); */
 }
 
 .slide {
@@ -93,6 +96,15 @@
   font-size: 10rem;
 
   /* border: 10px solid rgb(255, 174, 0); */
+}
+
+.placeholder-slide {
+  order: -1;
+  background-color: black;
+}
+
+.last-slide {
+  order: 1;
 }
 
 #slide-0 {
