--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@
 
 .picture-frame {
   display: flex;
-  /* overflow: hidden; */
+  overflow: hidden;
 
   width: calc(256px + 10px + 10px);
   height: calc(256px + 10px + 10px);
@@ -84,8 +84,6 @@
 
 #slide-show {
   display: flex;
-
-  /* width: 1024px; */
 }
 
 .slide {
@@ -96,8 +94,6 @@
   width: 256px;
   height: 256px;
   font-size: 10rem;
-
-  /* border: 10px solid rgb(255, 174, 0); */
 }
 
 .placeholder-slide {
