Change slide 0 to a png image
Webpack bundles the image into dist/ using asset/resource plugin (built-in?)

--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,10 @@
   background-color: aqua;
 }
 
+#slide-0-image {
+  content: url('./carousel/images/0.png');
+}
+
 #slide-1 {
   background-color: rgb(162, 0, 255);
 }
