--- a/src/style.css
+++ b/src/style.css
@@ -151,6 +151,23 @@
 }
 
 .control-button {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
+}
+
+#circles {
+  display: flex;
+  align-items: center;
+  
+}
+
+.jump-circle {
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+.jump-circle-filled {
+  background-color: red;
 }
