--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,8 @@
 
 #slide-show {
   display: flex;
+  /* width: 1280px;
+  justify-content: space-between; */
 }
 
 .slide {
@@ -139,6 +141,22 @@
   background-color: rgb(0, 255, 98);
 }
 
+.order-0 {
+  order: 0;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.order-3 {
+  order: 3;
+}
+
 #controls {
   display: flex;
   justify-content: center;
@@ -158,7 +176,6 @@
 #circles {
   display: flex;
   align-items: center;
-  
 }
 
 .jump-circle {
