--- a/src/style.css
+++ b/src/style.css
@@ -171,6 +171,7 @@
 .control-button {
   width: 50px;
   height: 50px;
+  cursor: pointer;
 }
 
 #circles {
@@ -183,6 +184,7 @@
   height: 20px;
   border: 2px solid black;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .jump-circle-filled {
